Fix card button's border on mobile display

--- a/css/styles.css
+++ b/css/styles.css
@@ -226,12 +226,16 @@ footer {
 
 @media (max-width: 800px) {
   .note-overlay {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     margin: 0;
     top: 0;
     left: 0;
     border-radius: 0;
+  }
+
+  .note-btns > button {
+    border-radius: 0 !important;
   }
 }
 
